Added example route
