# internal/transport/http/router/router.go
@@ -3,10 +3,10 @@ package router
 import (
 	"net/http"
 
+	"github.com/Jacobamv/golang_arch_template/internal/transport/http/handlers"
+	"github.com/Jacobamv/golang_arch_template/pkg/bootstrap/http/middlewares"
+	transportHTTP "github.com/Jacobamv/golang_arch_template/pkg/bootstrap/http/router"
 	"github.com/prometheus/client_golang/prometheus/promhttp"
-	"gitlab.humo.tj/orzu/applications/bridge/internal/transport/http/handlers"
-	"gitlab.humo.tj/orzu/applications/bridge/pkg/bootstrap/http/middlewares"
-	transportHTTP "gitlab.humo.tj/orzu/applications/bridge/pkg/bootstrap/http/router"
 )
 
 func AdaptHandler(h http.Handler) http.HandlerFunc {
@@ -20,6 +20,7 @@ func NewRouter(h *handlers.Handler, mw middlewares.Middleware) (router *transpor
 	router = transportHTTP.NewRouter()
 	router.ConnectSwagger(h.ServeSwaggerFiles)
 
+	router.POST("/auth/login", h.HLogin, mw.RequestLog, mw.Metrics, mw.CORS)
 	router.GET("/ping", h.HPingPong, mw.RequestLog, mw.Metrics, mw.CORS)
 	router.GET("/metrics", AdaptHandler(promhttp.Handler()), mw.RequestLog, mw.Metrics, mw.CORS)
 	return
